# bunny

./: .gitignore  CHANGELOG.md  CODE_STANDARDS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  bunny_technical_teardown.md  clippy.toml  deny.toml  rustfmt.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml  code-dojo.yml  release.yml
.obsidian/: app.json  appearance.json  workspace.json
.obsidian/plugins/obsidian-style-settings/: data.json
.repo-respect/: README.md
.repo-respect/receipts/: 2026-06-17-bvh-allocation-warm-up.md  2026-06-17-core-float-boundaries.md  2026-06-17-determinism-receipt-tests.md  2026-06-17-float-literal-gate.md  2026-06-17-map-constructor-ban.md  2026-06-17-panic-macro-gate.md  2026-06-17-staged-rust-index.md  2026-06-17-standards-review-docs.md  2026-06-17-std-fs-ambient-ban.md  2026-06-21-affine-inverse-min-translation.md  2026-06-21-affine-transforms.md  2026-06-21-mat3-mat4-min-cofactor.md  2026-06-21-matrix-types-and-receipt-gate.md  2026-06-21-pr191-doc-review-fixes.md  2026-06-21-pr191-repo-respect-topic-evidence.md  2026-06-21-pr191-review-fixes.md  2026-06-21-pr191-xtask-review-fixes.md  2026-06-26-deterministic-contract-profile.md  2026-06-26-v0-6-0-release-prep.md
crates/bunny-broadphase/: Cargo.toml  README.md
crates/bunny-broadphase/src/: bvh.rs  lib.rs  sweep_and_prune.rs  traversal.rs  utils.rs
crates/bunny-broadphase/src/bvh/: build.rs  split.rs
crates/bunny-broadphase/tests/: bvh_allocation_tests.rs  bvh_builder_tests.rs  bvh_tests.rs  determinism.rs
crates/bunny-codec/: Cargo.toml  README.md
crates/bunny-codec/src/: compressed.rs  lib.rs  obj.rs  ply.rs
crates/bunny-codec/src/compressed/: error.rs  read.rs  view.rs
crates/bunny-codec/src/ply/: header.rs
crates/bunny-codec/tests/: compressed_tests.rs  obj_tests.rs  ply_allocation_tests.rs  ply_tests.rs  stanford_fixture_tests.rs
crates/bunny-codec/tests/fixtures/: README.md  canonical_compressed_triangle.bunny.hex
crates/bunny-contract/: Cargo.toml  README.md
crates/bunny-contract/src/: lib.rs
crates/bunny-contract/tests/: generated_version_tests.rs
crates/bunny-geom/: Cargo.toml  README.md
crates/bunny-geom/src/: conversions.rs  lib.rs
crates/bunny-geom/tests/: determinism.rs  geom_tests.rs
crates/bunny-linalg/: Cargo.toml  README.md
crates/bunny-linalg/src/: fixed_affine2.rs  fixed_affine3.rs  fixed_mat2.rs  fixed_mat3.rs  fixed_mat4.rs  fixed_mat4_inverse.rs  fixed_vec2.rs  fixed_vec3.rs  lib.rs  matrix_common.rs
crates/bunny-linalg/tests/: affine_transform_tests.rs  coordinate_law_tests.rs  determinism.rs  matrix_tests.rs  property_tests.rs  unit_vector_tests.rs  vector_tests.rs
crates/bunny-mesh/: Cargo.toml  README.md
crates/bunny-mesh/src/: lib.rs
crates/bunny-mesh/tests/: determinism.rs  mesh_tests.rs  property_tests.rs
crates/bunny-num/: Cargo.toml  README.md
crates/bunny-num/src/: fixed_q32_32.rs  lib.rs
crates/bunny-num/src/fixed_q32_32/: conversions.rs
crates/bunny-num/tests/: determinism.rs  fixed_q32_32_tests.rs  property_tests.rs
crates/bunny-query/: Cargo.toml  README.md
crates/bunny-query/src/: closest.rs  lib.rs  ray.rs
crates/bunny-query/tests/: closest_raw_tests.rs  determinism.rs  property_tests.rs  query_tests.rs  ray_determinism_tests.rs
crates/bunny-wesley/: Cargo.toml  README.md  build.rs
crates/bunny-wesley/src/: main.rs  profile.rs  render.rs
docs/: BEARING.md  CODE_DOJO.md  COORDINATE_LAW.md  MATH_GEOMETRY_CAPABILITY_MAP.md  NUMERIC_CONSTITUTION.md  PROCESS.md  README.md  RUST_CODE_STANDARDS.editors-edition.md  SENSEIS_WISDOM.md  TECHNICAL_TEARDOWN.md  TESTING.md  VISION.md
docs/design/: 0001-bunny-graphics-commons.md  0002-bunny-wesley-generation.md  0003-bunny-q32-32-numeric-profile.md  0004-directive-driven-scalar-mapping.md
docs/goalposts/: post-v0.4.0-standards-alignment.md  v0.1.0-gp1.md  v0.1.0-gp2.md  v0.1.0-gp3.md  v0.1.1-gp1.md  v0.1.1-gp2.md  v0.1.1-gp3.md  v0.2.0-gp1.md  v0.2.0-gp2.md  v0.2.0-gp3.md  v0.3.0-gp1.md  v0.3.0-gp2.md  v0.4.0-gp1.md  v0.4.0-gp2.md  v0.4.0-gp3.md  v0.4.0-pre-gp2.md
docs/topics/contract-generation/: README.md  test-plan.md
docs/topics/coordinate-law/: README.md  test-plan.md
docs/topics/deterministic-contract-profile/: README.md  test-plan.md
docs/topics/matrix-types/: README.md  test-plan.md
docs/topics/repo-respect/: README.md  test-plan.md
schemas/bunny/v0/: graphics.graphql
scripts/: create_issues.sh  generate-contracts.sh  install-githooks.sh  publish-crates.sh
scripts/code-dojo/: check_commit_message.py  check_determinism_manifest.py  check_files.py  common.py  dojo.py
xtask/: Cargo.toml
xtask/src/: code_dojo.rs  git_helpers.rs  main.rs  repo_respect.rs  topic_docs.rs
