[workspace]
members = [
  "crates/bunny-contract",
  "crates/bunny-geom",
  "crates/bunny-linalg",
  "crates/bunny-num",
  "crates/bunny-query",
  "crates/bunny-wesley",
  "xtask",
]
resolver = "2"

[workspace.package]
authors = ["Bunny contributors"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/flyingrobots/bunny"
rust-version = "1.80"
version = "0.1.0"
