[workspace]
members = [
  "crates/bunny-broadphase",
  "crates/bunny-codec",
  "crates/bunny-contract",
  "crates/bunny-geom",
  "crates/bunny-linalg",
  "crates/bunny-mesh",
  "crates/bunny-num",
  "crates/bunny-query",
  "crates/bunny-wesley",
  "xtask",
]
resolver = "2"

[workspace.package]
authors = ["Bunny contributors"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/flyingrobots/bunny"
rust-version = "1.96"
version = "0.5.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
warnings = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
missing_panics_doc = "deny"
missing_errors_doc = "deny"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
