[package]
name = "bunny-broadphase"
description = "Bounding volume hierarchy (BVH) and spatial broadphase acceleration structures for Bunny."
authors.workspace = true
categories = ["data-structures", "game-development", "graphics"]
edition.workspace = true
keywords = ["bunny", "bvh", "broadphase", "collision"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bunny-geom = { path = "../bunny-geom", version = "0.5.0" }
bunny-linalg = { path = "../bunny-linalg", version = "0.5.0" }
bunny-num = { path = "../bunny-num", version = "0.5.0" }
bunny-query = { path = "../bunny-query", version = "0.5.0" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dev-dependencies]
dhat = "0.3.3"
wasm-bindgen-test = "0.3"
