[package]
name = "bunny-codec"
description = "Zero-copy mesh format adapters for Bunny."
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bunny-geom = { path = "../bunny-geom" }
bunny-linalg = { path = "../bunny-linalg" }
bunny-mesh = { path = "../bunny-mesh" }
bunny-num = { path = "../bunny-num" }

[lib]
path = "src/lib.rs"

[dev-dependencies]
wasm-bindgen-test = "0.3"
