[package]
name = "bunny-codec"
description = "Zero-copy mesh format adapters for Bunny."
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bunny-geom = { path = "../bunny-geom", version = "0.4.0" }
bunny-linalg = { path = "../bunny-linalg", version = "0.4.0" }
bunny-mesh = { path = "../bunny-mesh", version = "0.4.0" }
bunny-num = { path = "../bunny-num", version = "0.4.0" }

[lib]
path = "src/lib.rs"

[dev-dependencies]
wasm-bindgen-test = "0.3"
