[package]
name = "bunny-geom"
description = "Geometry primitives for Bunny graphics contracts."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bunny-linalg = { path = "../bunny-linalg" }
bunny-num = { path = "../bunny-num" }

[lib]
path = "src/lib.rs"
