[package]
name = "bunny-geom"
description = "Geometry primitives for Bunny graphics contracts."
authors.workspace = true
categories = ["game-development", "graphics", "mathematics"]
edition.workspace = true
keywords = ["bunny", "geometry", "fixed-point", "aabb"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bunny-linalg = { path = "../bunny-linalg", version = "0.6.0" }
bunny-num = { path = "../bunny-num", version = "0.6.0" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"
