[package]
name = "bunny-linalg"
description = "Linear algebra primitives for Bunny graphics contracts."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bunny-num = { path = "../bunny-num", version = "0.4.0" }

[lib]
path = "src/lib.rs"

[dev-dependencies]
wasm-bindgen-test = "0.3"
