[package]
name = "bunny-linalg"
description = "Linear algebra primitives for Bunny graphics contracts."
authors.workspace = true
categories = ["game-development", "graphics", "mathematics"]
edition.workspace = true
keywords = ["bunny", "linalg", "vector", "fixed-point"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bunny-num = { path = "../bunny-num", version = "0.5.0" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"
