[package]
name = "bunny-mesh"
description = "Quantized mesh layouts and verification hashes for Stanford Bunny."
authors.workspace = true
categories = ["encoding", "game-development", "graphics"]
edition.workspace = true
keywords = ["bunny", "mesh", "quantization", "hashing"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bunny-geom = { path = "../bunny-geom", version = "0.6.0" }
bunny-linalg = { path = "../bunny-linalg", version = "0.6.0" }
bunny-num = { path = "../bunny-num", version = "0.6.0" }
sha2 = { version = "0.10.9", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
