[package]
name = "bunny-query"
description = "Ray-casting and spatial query math solvers for Bunny."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bunny-geom = { path = "../bunny-geom", version = "0.4.0" }
bunny-linalg = { path = "../bunny-linalg", version = "0.4.0" }
bunny-num = { path = "../bunny-num", version = "0.4.0" }

[lib]
path = "src/lib.rs"

[dev-dependencies]
wasm-bindgen-test = "0.3"
