[package]
name = "bunny-query"
description = "Ray-casting and spatial query math solvers for Bunny."
authors.workspace = true
categories = ["game-development", "graphics", "mathematics"]
edition.workspace = true
keywords = ["bunny", "geometry", "collision", "raycast"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bunny-geom = { path = "../bunny-geom", version = "0.6.0" }
bunny-linalg = { path = "../bunny-linalg", version = "0.6.0" }
bunny-num = { path = "../bunny-num", version = "0.6.0" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"
