[package]
name = "bunny-wesley"
description = "Bunny Wesley schema extension and DTO generator."
authors.workspace = true
categories = ["development-tools::build-utils", "encoding", "graphics"]
edition.workspace = true
keywords = ["bunny", "schema", "generator", "graphql"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
sha2 = "0.10"
serde_json = "1.0"
wesley-core = "0.0.5"

[build-dependencies]
toml = "0.8"

[[bin]]
name = "bunny-wesley"
path = "src/main.rs"

[lints]
workspace = true
